--- a/index.html
+++ b/index.html
@@ -208,7 +208,9 @@ div.addthis_toolbox {
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
+           
+<a class="coinbase-button" data-code="a2974a7e50191e89ef9c1bc691b180f8" data-button-style="custom_small" href="https://coinbase.com/checkouts/a2974a7e50191e89ef9c1bc691b180f8">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+
           </div>
           </div>
           <div class="row-fluid">
